--- a/index.html
+++ b/index.html
@@ -22,11 +22,32 @@
 				//mode: "flash",
 				//showduration: true,
 				playlist: "playlist.json",
+				//playlist: "playlist.json",
 				//playlist: "http://api.flickr.com/services/feeds/groups_pool.gne?id=807213@N20&format=json&jsoncallback=?",
 				//route: {
 				// 	playlist: "items",
 				// 	image: "media.m"
 				//},
+				playlist: [
+					{
+						"title": "snow-motion",
+						"description": "what a massive and unbelievable winter we're having!",
+						"image": "http://d3el35u4qe4frz.cloudfront.net/eawtAP1q-720.jpg",
+						"link": "http://www.google.com/",
+						"duration": "183"
+					},
+					{
+						"title": "driving rain",
+						"description": "",
+						"image": "http://d3el35u4qe4frz.cloudfront.net/njZMLMwy-720.jpg",
+						"duration": "782"
+					},
+					{
+						"title": "winter brook",
+						"description": "",
+						"image": "http://d3el35u4qe4frz.cloudfront.net/Vg7cPUdl-720.jpg"
+					}
+				],
 				coverwidth: 180,
 				coverheight: 150,
 				fixedsize: true,
