fix setup bug, update remove method

--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 	<script>
 		function reset() {
 
-			// var replacement = document.createElement('div');
-			// replacement.id = "container";
+			var replacement = document.createElement('div');
+			replacement.id = "container";
 
-			// var el = document.getElementById('container');
-			// el.parentNode.replaceChild(replacement, el);
+			var el = document.getElementById('container');
+			el.parentNode.replaceChild(replacement, el);
 			
 			coverflow('container').setup({
 				//mode: "flash",
