--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
 	<div id="container"></div>
+	<!--<script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>-->
 	<script src="coverflow.js"></script>
 	<script>
 		function reset() {
@@ -17,6 +18,7 @@
 			var el = document.getElementById('container');
 			el.parentNode.replaceChild(replacement, el);
 			
+			//$('#container').coverflow({
 			coverflow('container').setup({
 				//mode: "flash",
 				//showduration: true,
