--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
 			//$('#container').coverflow({
 			coverflow('container').setup({
 				//mode: "flash",
+				//backgroundcolor: '009900',
+				//backgroundopacity: 0,
+				//wmode: 'transparent',
+				//gradientcolor: 'ff0000',
 				//showduration: true,
 				//playlist: "playlist.json",
 				//playlist: "http://api.flickr.com/services/feeds/groups_pool.gne?id=807213@N20&format=json&jsoncallback=?",
