add default item on load

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 			
 			//$('#container').coverflow({
 			coverflow('container').setup({
+				item: 1,
 				//mode: "flash",
 				//backgroundcolor: '009900',
 				//backgroundopacity: 0,
