--- a/index.html
+++ b/index.html
@@ -12,11 +12,7 @@
 	<script>
 		function reset() {
 
-			var replacement = document.createElement('div');
-			replacement.id = "container";
-
-			var el = document.getElementById('container');
-			el.parentNode.replaceChild(replacement, el);
+			coverflow('container').remove();
 			
 			//$('#container').coverflow({
 			coverflow('container').setup({
@@ -28,32 +24,32 @@
 				//wmode: 'transparent',
 				//gradientcolor: 'ff0000',
 				//showduration: true,
-				//playlist: "playlist.json",
+				playlist: "playlist.json",
 				//playlist: "http://api.flickr.com/services/feeds/groups_pool.gne?id=807213@N20&format=json&jsoncallback=?",
 				//route: {
 				// 	playlist: "items",
 				// 	image: "media.m"
 				//},
-				playlist: [
-					{
-						"title": "snow-motion",
-						"description": "what a massive and unbelievable winter we're having!",
-						"image": "http://d3el35u4qe4frz.cloudfront.net/eawtAP1q-720.jpg",
-						"link": "http://www.google.com/",
-						"duration": "183"
-					},
-					{
-						"title": "driving rain",
-						"description": "",
-						"image": "http://d3el35u4qe4frz.cloudfront.net/njZMLMwy-720.jpg",
-						"duration": "782"
-					},
-					{
-						"title": "winter brook",
-						"description": "",
-						"image": "http://d3el35u4qe4frz.cloudfront.net/Vg7cPUdl-720.jpg"
-					}
-				],
+				// playlist: [
+				// 	{
+				// 		"title": "snow-motion",
+				// 		"description": "what a massive and unbelievable winter we're having!",
+				// 		"image": "http://d3el35u4qe4frz.cloudfront.net/eawtAP1q-720.jpg",
+				// 		"link": "http://www.google.com/",
+				// 		"duration": "183"
+				// 	},
+				// 	{
+				// 		"title": "driving rain",
+				// 		"description": "",
+				// 		"image": "http://d3el35u4qe4frz.cloudfront.net/njZMLMwy-720.jpg",
+				// 		"duration": "782"
+				// 	},
+				// 	{
+				// 		"title": "winter brook",
+				// 		"description": "",
+				// 		"image": "http://d3el35u4qe4frz.cloudfront.net/Vg7cPUdl-720.jpg"
+				// 	}
+				// ],
 				coverwidth: 180,
 				coverheight: 150,
 				fixedsize: true,
@@ -73,10 +69,6 @@
 		}
 
 		reset();
-
-		window.onresize = function() {
-			coverflow('container').resize();
-		}
 
 	</script>
 
