--- a/index.html
+++ b/index.html
@@ -12,14 +12,11 @@
 	<script>
 		function reset() {
 
-			var replacement = document.createElement('div');
-			replacement.id = "container";
-
-			var el = document.getElementById('container');
-			el.parentNode.replaceChild(replacement, el);
+			coverflow('container').remove();
 			
 			//$('#container').coverflow({
 			coverflow('container').setup({
+				width: '100%',
 				item: 1,
 				//mode: "flash",
 				//backgroundcolor: '009900',
@@ -27,32 +24,32 @@
 				//wmode: 'transparent',
 				//gradientcolor: 'ff0000',
 				//showduration: true,
-				//playlist: "playlist.json",
+				playlist: "playlist.json",
 				//playlist: "http://api.flickr.com/services/feeds/groups_pool.gne?id=807213@N20&format=json&jsoncallback=?",
 				//route: {
 				// 	playlist: "items",
 				// 	image: "media.m"
 				//},
-				playlist: [
-					{
-						"title": "snow-motion",
-						"description": "what a massive and unbelievable winter we're having!",
-						"image": "http://d3el35u4qe4frz.cloudfront.net/eawtAP1q-720.jpg",
-						"link": "http://www.google.com/",
-						"duration": "183"
-					},
-					{
-						"title": "driving rain",
-						"description": "",
-						"image": "http://d3el35u4qe4frz.cloudfront.net/njZMLMwy-720.jpg",
-						"duration": "782"
-					},
-					{
-						"title": "winter brook",
-						"description": "",
-						"image": "http://d3el35u4qe4frz.cloudfront.net/Vg7cPUdl-720.jpg"
-					}
-				],
+				// playlist: [
+				// 	{
+				// 		"title": "snow-motion",
+				// 		"description": "what a massive and unbelievable winter we're having!",
+				// 		"image": "http://d3el35u4qe4frz.cloudfront.net/eawtAP1q-720.jpg",
+				// 		"link": "http://www.google.com/",
+				// 		"duration": "183"
+				// 	},
+				// 	{
+				// 		"title": "driving rain",
+				// 		"description": "",
+				// 		"image": "http://d3el35u4qe4frz.cloudfront.net/njZMLMwy-720.jpg",
+				// 		"duration": "782"
+				// 	},
+				// 	{
+				// 		"title": "winter brook",
+				// 		"description": "",
+				// 		"image": "http://d3el35u4qe4frz.cloudfront.net/Vg7cPUdl-720.jpg"
+				// 	}
+				// ],
 				coverwidth: 180,
 				coverheight: 150,
 				fixedsize: true,
@@ -72,6 +69,7 @@
 		}
 
 		reset();
+
 	</script>
 
 <div style="width:480px;">
@@ -85,9 +83,13 @@
 	<p>
 		<input id="toval" value="0" size="1"> <a href="javascript:;" onclick="coverflow().to(document.getElementById('toval').value);">To</a>
 	</p>
+	<p>
+		<a href="javascript:;" onclick="coverflow().fadeIn(function(){console.log(900);});">Fade in</a> - <a href="javascript:;" onclick="coverflow().fadeOut();">Fade out</a>
+	</p>
 </div>
 
 <button onclick="reset();">Reset</button>
+<button onclick="coverflow().remove();">Remove</button>
 
 </body>
 </html>
