--- a/index.html
+++ b/index.html
@@ -18,13 +18,17 @@
 			coverflow('container').setup({
 				width: '100%',
 				item: 1,
-				//mode: "flash",
+				mode: "flash",
 				//backgroundcolor: '009900',
 				//backgroundopacity: 0,
 				//wmode: 'transparent',
 				//gradientcolor: 'ff0000',
 				//showduration: true,
 				playlist: "playlist.json",
+				backgroundcolor: "990033",
+                backgroundopacity: 0,
+                flasWmode: "transparent",
+                buttonMode: true,
 				//playlist: "http://api.flickr.com/services/feeds/groups_pool.gne?id=807213@N20&format=json&jsoncallback=?",
 				//route: {
 				// 	playlist: "items",
