--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 			coverflow('container').setup({
 				width: '100%',
 				item: 1,
+				//mousewheel: false,
 				//mode: "flash",
 				//backgroundcolor: '009900',
 				//backgroundopacity: 0,
@@ -63,7 +64,11 @@
 				
 				this.on('click', function(index, link) {
 					document.getElementById('clickindex').innerHTML = index;
+					
 					console.log(link);
+					if (link) {
+						window.open(link, '_blank');
+					}
 				});
 			});
 		}
