add mousewheel configuration parameter

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 			coverflow('container').setup({
 				width: '100%',
 				item: 1,
+				//mousewheel: false,
 				//mode: "flash",
 				//backgroundcolor: '009900',
 				//backgroundopacity: 0,
