add blooddy crypto library, use JSON decoder
ActionScript library for processing binary data.
This library contains MD5, SHA-1, SHA-2 ( 224 и 256 ), Base64, CRC32
algorithms, JSON encoder & decoder as well as PNG and JPEG encoders.

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 				width: '100%',
 				item: 1,
 				//mousewheel: false,
-				//mode: "flash",
+				mode: "flash",
 				//backgroundcolor: '009900',
 				//backgroundopacity: 0,
 				//wmode: 'transparent',
