make touch-slide speed on mobile devices adjustable

--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
 				//gradientcolor: 'ff0000',
 				//showduration: true,
 				playlist: "playlist.json",
+				//preventslideback: false,
+				//slidespeed: 2,
 				//playlist: "http://api.flickr.com/services/feeds/groups_pool.gne?id=807213@N20&format=json&jsoncallback=?",
 				//route: {
 				// 	playlist: "items",
