--- a/index.html
+++ b/index.html
@@ -18,18 +18,18 @@
 			coverflow('container').setup({
 				width: '100%',
 				item: 1,
-				//mousewheel: false,
-				mode: "flash",
-				//backgroundcolor: '009900',
-				//backgroundopacity: 0,
-				//wmode: 'transparent',
-				//gradientcolor: 'ff0000',
-				//showduration: true,
-				playlist: "playlist.json",
-				//playlist: "http://api.flickr.com/services/feeds/groups_pool.gne?id=807213@N20&format=json&jsoncallback=?",
+				// mousewheel: false,
+				// mode: 'flash',
+				// backgroundcolor: '009900',
+				// backgroundopacity: 0,
+				// wmode: 'transparent',
+				// gradientcolor: 'ff0000',
+				// showduration: true,
+				playlist: 'playlist.json',
+				//playlist: 'http://api.flickr.com/services/feeds/groups_pool.gne?id=807213@N20&format=json&jsoncallback=?',
 				//route: {
-				// 	playlist: "items",
-				// 	image: "media.m"
+				// 	playlist: 'items',
+				// 	image: 'media.m'
 				//},
 				// playlist: [
 				// 	{
