--- a/index.html
+++ b/index.html
@@ -18,18 +18,18 @@
 			coverflow('container').setup({
 				width: '100%',
 				item: 1,
-				//mousewheel: false,
-				//mode: "flash",
-				//backgroundcolor: '009900',
-				//backgroundopacity: 0,
-				//wmode: 'transparent',
-				//gradientcolor: 'ff0000',
-				//showduration: true,
-				playlist: "playlist.json",
-				//playlist: "http://api.flickr.com/services/feeds/groups_pool.gne?id=807213@N20&format=json&jsoncallback=?",
+				// mousewheel: false,
+				// mode: 'flash',
+				// backgroundcolor: '009900',
+				// backgroundopacity: 0,
+				// wmode: 'transparent',
+				// gradientcolor: 'ff0000',
+				// showduration: true,
+				playlist: 'playlist.json',
+				//playlist: 'http://api.flickr.com/services/feeds/groups_pool.gne?id=807213@N20&format=json&jsoncallback=?',
 				//route: {
-				// 	playlist: "items",
-				// 	image: "media.m"
+				// 	playlist: 'items',
+				// 	image: 'media.m'
 				//},
 				// playlist: [
 				// 	{
@@ -87,9 +87,6 @@
 	</p>
 	<p>
 		<input id="toval" value="0" size="1"> <a href="javascript:;" onclick="coverflow().to(document.getElementById('toval').value);">To</a>
-	</p>
-	<p>
-		<a href="javascript:;" onclick="coverflow().fadeIn(function(){console.log(900);});">Fade in</a> - <a href="javascript:;" onclick="coverflow().fadeOut();">Fade out</a>
 	</p>
 </div>
 
