--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 			coverflow('container').setup({
 				width: '100%',
 				item: 1,
+				rotatedelay: 2000,
 				// mousewheel: false,
 				// mode: 'flash',
 				// backgroundcolor: '009900',
